# nxus-codex-plugins

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  marketplace.json
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  install_issue.yml  tier_question.yml
.github/workflows/: publish-to-docs.yml  release-gates.yml
examples/: README.md
examples/codex-task-recipes/: 01-streaming-rust.md  02-structured-json-python.md  03-multi-provider-go.md  04-retry-fallback.md  05-ce-rule-validation.md  06-pro-solver-what-if.md  07-migrate-openai-python.md  08-vision-capability-detection.md  09-zen-decision-table.md  10-community-edition-options.md  11-bayesian-solver-clips.md  12-post-activation-pro.md  13-local-ollama.md  14-cli-bash-setup.md  README.md
examples/fixtures/: README.md
examples/fixtures/starters/cli-bash-workspace/: README.md
examples/fixtures/starters/cli-bash-workspace/data/: request.json
examples/fixtures/starters/cli-bash-workspace/scripts/: run.sh
examples/fixtures/starters/direct-openai-python/: README.md  app.py  pyproject.toml
examples/fixtures/starters/go-service/: README.md  go.mod  main.go  main_test.go
examples/fixtures/starters/local-provider-python/: README.md  app.py  pyproject.toml
examples/fixtures/starters/python-app/: README.md  pyproject.toml
examples/fixtures/starters/python-app/src/example_app/: __init__.py  __main__.py
examples/fixtures/starters/rust-cli/: Cargo.toml  README.md
examples/fixtures/starters/rust-cli/src/: main.rs
plugins/nxuskit/: .mcp.json  README.md  release.json
plugins/nxuskit/.codex-plugin/: plugin.json
plugins/nxuskit/mcp/: .gitignore  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  recipes-source.yaml
plugins/nxuskit/mcp/metadata/: snapshot.json  snapshot.meta.json
plugins/nxuskit/mcp/src/nxuskit_celerat/: __init__.py
plugins/nxuskit/mcp/src/nxuskit_celerat/mcp/: __init__.py  __main__.py  logging_config.py  models.py  phi_boundary.py  ranker.py  server.py  store.py  tools.py
plugins/nxuskit/skills/nxuskit/: SKILL.md
plugins/nxuskit/skills/nxuskit/references/: README.md  api-patterns.md  example-index.md  knowledge-work-lane.md  mcp-overview.md  migration-recipes.md  phi-boundary.md  pro-disclosure.md  setup-and-smoke.md  tier-guide.md
scripts/: export-to-docs.sh
