[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nxuskit-celerat-mcp"
version = "0.9.4"
description = "Local read-only Model Context Protocol server for the nxusKit Celerat Codex Plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "nxus.SYSTEMS LLC", email = "ken@nxus.systems" }]
keywords = ["mcp", "codex-plugin", "nxuskit", "celerat", "llm", "reasoning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp>=1.0,<2.0",
  "pydantic>=2.7,<3.0",
  "rapidfuzz>=3.6,<4.0",
  "orjson>=3.10,<4.0",
  "structlog>=25.0,<26.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
nxuskit-celerat-mcp = "nxuskit_celerat.mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/nxus-SYSTEMS/nxus-codex-plugins"
Source = "https://github.com/nxus-SYSTEMS/nxus-codex-plugins"
Issues = "https://github.com/nxus-SYSTEMS/nxus-codex-plugins/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nxuskit_celerat*"]

[tool.setuptools.package-data]
"nxuskit_celerat.mcp" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PTH", "RUF"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*", "rapidfuzz.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "slow: tests that take more than 1s",
  "benchmark: performance benchmark tests",
]

[tool.coverage.run]
source = ["nxuskit_celerat.mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
